ported histmap-ko functions - Filled in some targets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(create_inla_mesh)
 export(detrend)
+export(fill_date)
 export(fit_all_tmb)
 export(fit_all_tmb_spt)
 export(fit_tmb)
@@ -9,6 +10,9 @@ export(impute_df)
 export(interpolate_air_quality_tsibble)
 export(pred_tmb)
 export(rasterize_freq)
+export(rectify_year)
+export(summarize_annual)
+export(summarize_daily)
 export(tmb_rast)
 import(fabletools)
 importFrom(INLA,inla.mesh.2d)
@@ -18,15 +22,19 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(fabletools,as_tsibble)
 importFrom(feasts,STL)
 importFrom(fmesher,fm_as_segm)
 importFrom(fmesher,fm_extensions)
 importFrom(fmesher,fm_mesh_2d_inla)
+importFrom(lubridate,date)
+importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(missRanger,missRanger)
 importFrom(purrr,map_dfr)
