--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ Imports:
     fable,
     fabletools,
     rlang
+Suggests:
+    geodata
 License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
