--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(detrend)
 export(fill_date)
 export(fit_all_tmb)
 export(fit_all_tmb_spt)
+export(fit_tidy_xgb)
 export(fit_tmb)
 export(impute_df)
 export(interpolate_air_quality_tsibble)
@@ -15,7 +16,13 @@ export(summarize_annual)
 export(summarize_daily)
 export(tmb_rast)
 import(fabletools)
+import(finetune)
+import(tidymodels)
 importFrom(INLA,inla.mesh.2d)
+importFrom(dials,grid_space_filling)
+importFrom(dials,learn_rate)
+importFrom(dials,min_n)
+importFrom(dials,tree_depth)
 importFrom(dplyr,all_of)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
@@ -33,14 +40,18 @@ importFrom(feasts,STL)
 importFrom(fmesher,fm_as_segm)
 importFrom(fmesher,fm_extensions)
 importFrom(fmesher,fm_mesh_2d_inla)
+importFrom(hardhat,extract_parameter_set_dials)
 importFrom(lubridate,date)
 importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(missRanger,missRanger)
 importFrom(purrr,map_dfr)
+importFrom(recipes,step_normalize)
+importFrom(recipes,step_pca)
 importFrom(rlang,"!!")
 importFrom(rlang,is_installed)
 importFrom(rlang,sym)
+importFrom(rsample,vfold_cv)
 importFrom(sdmTMB,make_mesh)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_coordinates)
@@ -56,3 +67,9 @@ importFrom(tidyr,fill)
 importFrom(tidyterra,as_spatraster)
 importFrom(tsibble,as_tsibble)
 importFrom(tsibble,fill_gaps)
+importFrom(workflows,add_model)
+importFrom(workflows,add_recipe)
+importFrom(workflows,workflow)
+importFrom(yardstick,metric_set)
+importFrom(yardstick,rmse)
+importFrom(yardstick,rsq)
