--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: huimori
 Title: Hybrid Urban-rural Integrated Modeling with Open Reproducible Infrastructure in Korea
-Version: 0.0.4.9000
+Version: 0.0.5.9000
 Authors@R: 
     person("Insang", "Song", , "geoissong@snu.ac.kr", role = c("aut", "cre"))
 Description: Reproducible pipeline for hybrid urban-rural integrated modeling in Korea.
@@ -22,7 +22,8 @@ Imports:
     fabletools,
     rlang
 Suggests:
-    geodata
+    geodata,
+    janitor
 License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
