--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(fit_tidy_xgb)
 export(fit_tmb)
 export(impute_df)
 export(interpolate_air_quality_tsibble)
+export(lower_filter)
 export(pred_tmb)
 export(rasterize_freq)
 export(rectify_year)
@@ -53,6 +54,7 @@ importFrom(recipes,step_pca)
 importFrom(rlang,"!!")
 importFrom(rlang,is_installed)
 importFrom(rlang,sym)
+importFrom(rsample,group_vfold_cv)
 importFrom(rsample,vfold_cv)
 importFrom(sdmTMB,make_mesh)
 importFrom(sf,st_as_sf)
@@ -60,6 +62,7 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_make_grid)
 importFrom(sf,st_transform)
+importFrom(spatialsample,spatial_block_cv)
 importFrom(stats,approx)
 importFrom(stats,predict)
 importFrom(terra,app)
