--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(detrend)
 export(fill_date)
 export(fit_all_tmb)
 export(fit_all_tmb_spt)
+export(fit_tidy_lgb)
 export(fit_tidy_xgb)
 export(fit_tmb)
 export(impute_df)
