landuse summary update - less memory intensive - make_binary_mask() for a generalized (circular) mask

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(fit_tmb)
 export(impute_df)
 export(interpolate_air_quality_tsibble)
 export(lower_filter)
+export(make_binary_mask)
 export(pred_tmb)
 export(rasterize_freq)
 export(rectify_year)
