--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,10 +15,12 @@ export(lower_filter)
 export(make_binary_mask)
 export(pred_tmb)
 export(rasterize_freq)
+export(rasterize_freq_whitebox)
 export(rectify_year)
 export(summarize_annual)
 export(summarize_daily)
 export(tmb_rast)
+import(Rcpp)
 import(fabletools)
 import(finetune)
 import(tidymodels)
@@ -70,11 +72,15 @@ importFrom(stats,predict)
 importFrom(terra,app)
 importFrom(terra,ext)
 importFrom(terra,focal)
+importFrom(terra,focalCpp)
+importFrom(terra,rast)
 importFrom(terra,values)
+importFrom(terra,writeRaster)
 importFrom(tidyr,fill)
 importFrom(tidyterra,as_spatraster)
 importFrom(tsibble,as_tsibble)
 importFrom(tsibble,fill_gaps)
+importFrom(whitebox,wbt_mean_filter)
 importFrom(workflows,add_model)
 importFrom(workflows,add_recipe)
 importFrom(workflows,workflow)
