--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fit_all_tmb_spt)
 export(fit_tidy_lgb)
 export(fit_tidy_xgb)
 export(fit_tmb)
+export(gw_emittors)
 export(impute_df)
 export(interpolate_air_quality_tsibble)
 export(lower_filter)
@@ -52,6 +53,8 @@ importFrom(lubridate,date)
 importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(missRanger,missRanger)
+importFrom(purrr,list_rbind)
+importFrom(purrr,map)
 importFrom(purrr,map_dfr)
 importFrom(recipes,step_normalize)
 importFrom(recipes,step_pca)
@@ -63,11 +66,15 @@ importFrom(rsample,vfold_cv)
 importFrom(sdmTMB,make_mesh)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_coordinates)
+importFrom(sf,st_distance)
 importFrom(sf,st_drop_geometry)
+importFrom(sf,st_intersection)
+importFrom(sf,st_is_longlat)
 importFrom(sf,st_make_grid)
 importFrom(sf,st_transform)
 importFrom(spatialsample,spatial_block_cv)
 importFrom(stats,approx)
+importFrom(stats,dnorm)
 importFrom(stats,predict)
 importFrom(terra,app)
 importFrom(terra,ext)
